--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -70,7 +70,7 @@
     <Content Include="about.aspx" />
     <Content Include="customerDashboard.aspx" />
     <Content Include="customerProfile.aspx">
-      <BrowseToURL>/customerProfile.aspx</BrowseToURL>
+      <BrowseToURL>customerProfile.aspx</BrowseToURL>
     </Content>
     <Content Include="customerSettings.aspx" />
     <Content Include="display3.jpg" />
