--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -90,7 +90,7 @@
       <BrowseToURL>/contact.aspx</BrowseToURL>
     </Content>
     <Content Include="default.aspx">
-      <BrowseToURL>/default.aspx</BrowseToURL>
+      <BrowseToURL>default.aspx</BrowseToURL>
     </Content>
     <Content Include="doc.jpg" />
     <Content Include="doctor.jpg" />
@@ -139,6 +139,7 @@
     <Content Include="ntja.jpg" />
     <Content Include="nwu.png" />
     <Content Include="passwordForm.aspx" />
+    <Content Include="PaymentGateway.aspx" />
     <Content Include="pet.jpg" />
     <Content Include="pet.png" />
     <Content Include="Profile.aspx" />
@@ -223,6 +224,13 @@
     </Compile>
     <Compile Include="main.aspx.designer.cs">
       <DependentUpon>main.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentGateway.aspx.cs">
+      <DependentUpon>PaymentGateway.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PaymentGateway.aspx.designer.cs">
+      <DependentUpon>PaymentGateway.aspx</DependentUpon>
     </Compile>
     <Compile Include="Profile.aspx.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
