--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="about.aspx" />
     <Content Include="AdminDashboard.aspx" />
+    <Content Include="admin_doc_tab.aspx" />
     <Content Include="App_Data\NewPetPals-Data.mdf" />
     <Content Include="App_Data\NewPetPals-Data_log.ldf">
       <DependentUpon>NewPetPals-Data.mdf</DependentUpon>
@@ -163,6 +164,13 @@
     </Compile>
     <Compile Include="AdminDashboard.aspx.designer.cs">
       <DependentUpon>AdminDashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin_doc_tab.aspx.cs">
+      <DependentUpon>admin_doc_tab.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin_doc_tab.aspx.designer.cs">
+      <DependentUpon>admin_doc_tab.aspx</DependentUpon>
     </Compile>
     <Compile Include="bookAppoinment.aspx.cs">
       <DependentUpon>bookAppoinment.aspx</DependentUpon>
