--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -75,6 +75,11 @@
       <BrowseToURL>/customerProfile.aspx</BrowseToURL>
     </Content>
     <Content Include="customerSettings.aspx" />
+
+    <Content Include="default.aspx">
+      <BrowseToURL>default.aspx</BrowseToURL>
+    </Content>
+
     <Content Include="display3.jpg" />
     <Content Include="App_Data\NewPetPals-Data.mdf" />
     <Content Include="App_Data\NewPetPals-Data.mdf_log.ldf">
