--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -68,7 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="about.aspx" />
-    <Content Include="AdminDashboard.aspx" />
+    <Content Include="AdminDashboard.aspx">
+      <BrowseToURL>AdminDashboard.aspx</BrowseToURL>
+    </Content>
     <Content Include="App_Data\NewPetPals-Data.mdf" />
     <Content Include="App_Data\NewPetPals-Data_log.ldf">
       <DependentUpon>NewPetPals-Data.mdf</DependentUpon>
